fixed text gap

--- a/src/components/LevelsModal/LevelsModal.module.scss
+++ b/src/components/LevelsModal/LevelsModal.module.scss
@@ -11,7 +11,7 @@
   border: 1px var(--tg-theme-button-color) solid;
   outline: none;
   overflow-y: auto;
-  padding: 5px 10px;
+  padding: 10px;
 
   &:focus {
     outline: none;
@@ -19,12 +19,10 @@
 
   .level {
     width: 100%;
-    height: 80px;
-    // background: lighten($background-color, $amount: 0.3);
   }
 
   .level:not(:last-child) {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 }
 
